# pythonimmediate-tex

./: .gitignore  .readthedocs.yml  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg
docs/: conf.py  index.rst  pythonimmediate.communicate.rst  pythonimmediate.copy_to_stderr.rst  pythonimmediate.engine.rst  pythonimmediate.lowlevel.rst  pythonimmediate.multiengine.rst  pythonimmediate.pytotex.rst  pythonimmediate.rst  pythonimmediate.simple.rst  pythonimmediate.texcmds.rst  pythonimmediate.textopy.rst  pythonimmediate.tikz.rst  pythonimmediate.util.rst  requirements.txt  run-sphinx-autobuild
pythonimmediate/: __init__.py  communicate.py  conftest.py  engine.py  lowlevel.py  main.py  multiengine.py  pytotex.py  simple.py  texcmds.py  textopy.py  tikz.py  util.py
pythonimmediatehelper/: copy_to_stderr.py
test/: test_main.py
tex/: pythonimmediate.sty  pythonimmediate_helper.lua  test_pythonimmediate.tex  test_pythonimmediate_benchmark.tex
tex/doc/: pythonimmediate.tex
tex/test/: helper_file.py  test_pythonimmediate.tex  test_pythonimmediate_pyerror.tex  test_pythonimmediate_texerror.tex
